[package]
name = "hoku-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2"
const_format = "0.2.33"
homedir = "0.3.3"
serde_json = "1.0"
serde.workspace = true
