[package]
name = "recall_ipc_actors_abis"
description = "Rust bindings for the IPC Solidity Actors"
authors = ["Protocol Labs"]
edition = "2021"
license = "MIT OR Apache-2.0"
version.workspace = true

[dependencies]
ethers = { workspace = true, features = ["abigen", "ws"] }
fvm_shared = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
ethers = { workspace = true, features = ["abigen", "ws"] }
