[package]
name = "recall_frc42_dispatch"
description = "Filecoin FRC-0042 calling convention/dispatch support library"
license = "MIT OR Apache-2.0"
keywords = ["recall", "filecoin", "dispatch", "frc-0042"]
repository = "https://github.com/recallnet/ipc/"
edition = "2021"
version.workspace = true

[dependencies]
fvm_ipld_encoding = { workspace = true }
fvm_sdk = { workspace = true, optional = true }
fvm_shared = { workspace = true }
recall_frc42_hasher = { version = "0.1.0", path = "hasher" }
recall_frc42_macros = { workspace = true }
thiserror = { version = "1.0.31" }

[features]
# disable default features to avoid dependence on fvm_sdk (for proc macro and similar purposes)
default = ["use_sdk"]
use_sdk = ["dep:fvm_sdk"]
