[package]
name = "recall_fendermint_actors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
recall_fendermint_actor_activity_tracker = { path = "activity-tracker", features = ["fil-actor"] }
recall_fendermint_actor_blobs = { path = "blobs", features = ["fil-actor"] }
recall_fendermint_actor_blob_reader = { path = "blob_reader", features = ["fil-actor"] }
recall_fendermint_actor_bucket = { path = "bucket", features = ["fil-actor"] }
recall_fendermint_actor_chainmetadata = { path = "chainmetadata", features = ["fil-actor"] }
recall_fendermint_actor_eam = { path = "eam", features = ["fil-actor"] }
recall_fendermint_actor_gas_market_eip1559 = { path = "gas_market/eip1559", features = ["fil-actor"] }
recall_fendermint_actor_recall_config = { path = "recall_config", features = ["fil-actor"] }
recall_fendermint_actor_timehub = { path = "timehub", features = ["fil-actor"] }

[dependencies]
cid = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
recall_fendermint_actor_blobs = { path = "blobs" }
recall_fendermint_actor_blob_reader = { path = "blob_reader" }
recall_fendermint_actor_bucket = { path = "bucket" }
recall_fendermint_actor_chainmetadata = { path = "chainmetadata" }
recall_fendermint_actor_eam = { path = "eam" }
recall_fendermint_actor_gas_market_eip1559 = { path = "gas_market/eip1559" }
recall_fendermint_actor_recall_config = { path = "recall_config" }
recall_fendermint_actor_timehub = { path = "timehub" }

[build-dependencies]
anyhow = { workspace = true }
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }
fil_actor_bundler = "6.1.0"
num-traits = { workspace = true }
toml = { workspace = true }
