[package]
name = "recall_fendermint_rpc"
description = "Utilities working with the tendermint_rpc library to provide an API facade for Fendermint"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint-proto = { workspace = true }
tracing = { workspace = true }

cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

recall_fendermint_crypto = { path = "../crypto", version = "0.1.0" }
recall_fendermint_vm_actor_interface = { path = "../vm/actor_interface", version = "0.1.0" }
recall_fendermint_vm_message = { path = "../vm/message", version = "0.1.0" }
recall_fendermint_actor_bucket = { path = "../actors/bucket", version = "0.1.0" }
recall_fendermint_actor_machine = { path = "../actors/machine", version = "0.1.0" }
recall_fendermint_actor_timehub = { path = "../actors/timehub", version = "0.1.0" }

[dev-dependencies]
clap = { workspace = true }
ethers = { workspace = true, features = ["abigen"] }
hex = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

recall_fendermint_vm_genesis = { path = "../vm/genesis" }
