[package]
name = "recall_ipc_api"
description = "IPC common types and utils"
edition.workspace = true
license-file.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
recall_fil_actors_runtime = { workspace = true, optional = true }
fnv = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
cid = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
ethers = { workspace = true }
tracing = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }

recall_ipc_actors_abis = { workspace = true }
recall_ipc_types = { workspace = true }
recall_merkle_tree_rs = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
recall_fil_actors_runtime = { workspace = true }

[features]
default = []
fil-actor = ["recall_fil_actors_runtime"]
