[package]
name = "recall_actor_sdk"
description = "Recall network fil actor sdk"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
fvm_shared = { workspace = true }
fvm_sdk = { workspace = true }
num-traits = { workspace = true }
recall_fil_actors_runtime = { workspace = true }
recall_sol_facade = { workspace = true, features = [] }
anyhow = { workspace = true }
fvm_ipld_encoding = { workspace = true }
serde = { workspace = true }
recall_fil_actors_evm_shared = { workspace = true }
