[package]
name = "recall_executor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fvm = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
num-traits = { workspace = true }
replace_with = { workspace = true }
tracing = { workspace = true }

recall_fendermint_actor_blobs_shared = { path = "../../fendermint/actors/blobs/shared" }
recall_fendermint_vm_actor_interface = { path = "../../fendermint/vm/actor_interface" }

[features]
testing = []
