[package]
name = "recall_ipld"
description = "Recall network ipld hamt and amt implementations"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
recall_fil_actors_runtime = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
fvm_sdk = { workspace = true }
integer-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]