[package]
name = "recall_fendermint_actors_api"
description = "API and interface types for pluggable actors."
license.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
recall_fil_actors_runtime = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
log = { workspace = true }
multihash = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
hex-literal = { workspace = true }
recall_frc42_dispatch = { workspace = true }

[dev-dependencies]
recall_fil_actors_evm_shared = { workspace = true }
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
