[package]
name = "recall_fendermint_actor_blobs"
description = "Singleton actor for blob management"
license.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
recall_fil_actors_runtime = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
log = { workspace = true, features = ["std"] }
num-traits = { workspace = true }
recall_sol_facade = { workspace = true, features = ["blobs", "credit", "gas"] }
serde = { workspace = true, features = ["derive"] }

recall_fendermint_actor_recall_config_shared = { workspace = true }
recall_fendermint_actor_blobs_shared = { workspace = true }
recall_fendermint_actor_machine = { workspace = true }

recall_actor_sdk = { workspace = true }
recall_ipld = { workspace = true }

[dev-dependencies]
recall_fil_actors_evm_shared = { workspace = true }
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }
hex-literal = { workspace = true }
rand = { workspace = true }

fendermint_actor_blobs_testing = { path = "./testing", version = "0.1.0" }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
