[package]
name = "recall_fendermint_actor_bucket"
description = "Actor for bucket object storage"
license.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
cid = { workspace = true, default-features = false }
recall_fil_actors_runtime = { workspace = true }
recall_frc42_dispatch = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
recall_sol_facade = { workspace = true, features = ["bucket"] }
serde = { workspace = true, features = ["derive"] }

recall_fendermint_actor_blobs_shared = { workspace = true }
recall_fendermint_actor_machine = { workspace = true }
recall_ipld = { workspace = true }
recall_actor_sdk = { workspace = true }

[dev-dependencies]
recall_fil_actors_evm_shared = { workspace = true }
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }
hex-literal = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

fendermint_actor_blobs_testing = { path = "../blobs/testing" }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
