[package]
name = "recall_fendermint_actor_chainmetadata"
description = "Actor for storing chain metadata"
license.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cid = { workspace = true, default-features = false }
recall_fil_actors_runtime = { workspace = true, optional = true, features = [
    "fil-actor",
] }
fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_amt = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_tuple = { workspace = true }
num-traits = { workspace = true }
recall_frc42_dispatch = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
fil-actor = ["recall_fil_actors_runtime"]
