[package]
name = "recall_fendermint_actor_machine"
description = "Shared types for ADM machine actors"
license.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
recall_fil_actors_runtime = { workspace = true }
recall_fil_actor_adm = { workspace = true }
recall_frc42_dispatch = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
recall_sol_facade = { workspace = true, features = ["machine"] }
serde = { workspace = true, features = ["derive"] }
recall_actor_sdk = { workspace = true }

[dev-dependencies]
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
