[package]
name = "fendermint_actor_rebate_pool"
description = "Actor for Rebate Pool"
license.workspace = true
edition.workspace = true
authors.workspace = true
version = "0.1.0"

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fil_actors_runtime = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_tuple = { workspace = true }
fendermint_actor_rebate_pool_shared = { path = "shared" }

[dev-dependencies]

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
