[package]
name = "recall_fendermint_actor_recall_config"
description = "Singleton actor for updateable Recall network parameters"
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
recall_fendermint_actor_blobs_shared = { workspace = true }
recall_fil_actors_runtime = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
num-traits = { workspace = true }
recall_sol_facade = { workspace = true, features = ["config"] }
recall_actor_sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }

recall_fendermint_actor_recall_config_shared = { workspace = true }
recall_fendermint_actor_machine = { workspace = true }

[dev-dependencies]
recall_fil_actors_evm_shared = { workspace = true }
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }
hex-literal = { workspace = true }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
