[package]
name = "fendermint_actor_sqlite"
description = "Actor for sqlite storage"
license.workspace = true
edition.workspace = true
authors.workspace = true
version = "0.1.0"

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true, default-features = false }
fendermint_actor_machine = { path = "../machine" }
fil_actors_runtime = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
getrandom = { version = "*", features = ["custom"] }
log = { workspace = true, features = ["std"] }
multihash = { workspace = true, default-features = false }
num-derive = { workspace = true }
num-traits = { workspace = true }
rusqlite = { git = "https://github.com/dav1do/rusqlite.git", branch = "wasm32-unknown-unknown", features = [
    "bundled",
    "load_extension",
] }
serde = { workspace = true, features = ["derive"] }
serde_tuple = { workspace = true }
sqlite-vfs = { git = "https://github.com/sanderpick/sqlite-vfs.git", branch = "wasm32-unknown-unknown" }
serde_with = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fendermint_testing = { path = "../../testing", features = ["arb"] }
fil_actors_evm_shared = { workspace = true }
fil_actors_runtime = { workspace = true, features = ["test_utils"] }
hex-literal = { workspace = true }
iroh-base = { workspace = true, features = ["key"] }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true }
serde_ipld_dagcbor = { version = "*" }
serde_json = { workspace = true }
serial_test = { workspace = true }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
