[package]
name = "recall_fendermint_actor_timehub"
description = "Actor for timestamping data hashes"
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true, default-features = false }
recall_fil_actors_runtime = { workspace = true }
recall_frc42_dispatch = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, features = ["log"] }

recall_sol_facade = { workspace = true, features = ["timehub"] }
recall_actor_sdk = { workspace = true }

recall_fendermint_actor_blobs_shared = { workspace = true }
recall_fendermint_actor_machine = { workspace = true }

[dev-dependencies]
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }
recall_fil_actors_evm_shared = { workspace = true }
hex-literal = { workspace = true }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
