[package]
name = "fendermint_app_options"
description = "Fendermint CLI options"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
tendermint-rpc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
recall_ipc_api = { workspace = true }
recall_ipc_types = { workspace = true }
url = { workspace = true }
ipc-observability = { workspace = true }

recall_fendermint_vm_genesis = { path = "../../vm/genesis" }
recall_fendermint_vm_actor_interface = { path = "../../vm/actor_interface" }
fendermint_materializer = { path = "../../testing/materializer" }
