[package]
name = "recall_fendermint_eth_api"
description = "Ethereum JSON-RPC facade"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
cid = { workspace = true }
ethers-core = { workspace = true }
ethers-contract = { workspace = true }
erased-serde = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpc-v2 = { workspace = true }
lazy_static = { workspace = true }
lru_time_cache = { workspace = true }
paste = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

recall_fil_actors_evm_shared = { workspace = true }
fvm_shared = { workspace = true, features = ["crypto"] }
fvm_ipld_encoding = { workspace = true }

recall_fendermint_crypto = { workspace = true }
recall_fendermint_rpc = { workspace = true }
recall_fendermint_vm_actor_interface = { workspace = true }
recall_fendermint_vm_message = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
ethers = { workspace = true, features = ["abigen"] }
hex = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

recall_fendermint_testing = { path = "../../testing", features = ["arb"] }
recall_fendermint_vm_message = { path = "../../vm/message", features = ["arb"] }
