[package]
name = "fendermint_materializer"
description = "Toolkit to instantiate testnets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
either = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
fvm_shared = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
multihash = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tendermint-rpc = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

arbitrary = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }

recall_ipc_api = { path = "../../../ipc/api" }
ipc-provider = { path = "../../../ipc/provider" }
recall_ipc_actors_abis = { path = "../../../contracts/binding" }

recall_fendermint_crypto = { path = "../../crypto" }
recall_fendermint_vm_actor_interface = { path = "../../vm/actor_interface" }
recall_fendermint_vm_core = { path = "../../vm/core" }
recall_fendermint_vm_genesis = { path = "../../vm/genesis" }
recall_fendermint_vm_encoding = { path = "../../vm/encoding" }
recall_fendermint_vm_message = { path = "../../vm/message" }
fendermint_vm_interpreter = { path = "../../vm/interpreter" }
recall_fendermint_testing = { version = "0.1.0", path = "..", optional = true }


[dev-dependencies]
env_logger = { workspace = true }
futures = { workspace = true }
quickcheck = { workspace = true }
quickcheck_async = { workspace = true }
quickcheck_macros = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

# Enable arb on self for tests.
fendermint_materializer = { path = ".", features = ["arb"] }
recall_fendermint_testing = { version = "0.1.0", path = "..", features = ["golden"] }

[features]
default = []
arb = [
  "arbitrary",
  "quickcheck",
  "fvm_shared/arb",
  "recall_fendermint_testing/arb",
  "recall_fendermint_vm_genesis/arb",
]
